2001-08-22  Dave Peticolas  <dave@krondo.com>

	* src/gnome/query-user.c
	(gnc_choose_radio_option_dialog_parented): add a cancel button

	* src/guile/gw-gnc-spec.scm: fix api naming

	* src/report/locale-specific/us/taxtxf.scm: fix api naming

2001-08-20  Dave Peticolas  <dave@krondo.com>

	* others: xaccGetAccountRoot->xaccAccountGetRoot

	* src/engine/messages.h: move this file here

	* src/engine/test/test-group-vs-book.c: new file. test group/book
	references

	* src/engine/test-core/test-engine-stuff.c (get_random_group): new
	func

	* src/engine/gnc-book.c: (gnc_book_set_group): update group's book

	* src/engine/Group.c (xaccGroupGetBook): new func
	(xaccGroupSetBook): new func

	* src/engine/GroupP.h: add a reference to the group's book

	* src/app-utils/global-options.[ch]: cleanup

	* src/app-utils/option-util.[ch]: cleanup

	* src/gnome/top-level.c: take out reverse balance implementations

	* src/app-utils/gnc-ui-util.c: take out deprecated api
        implementations. implement reverse balance api calls.

	* src/register/ledger-core/SplitLedger.[ch]: take out reverse
	balance callback. just use app-utils version.

	* src/app-utils/gnc-ui-util.h: remove deprecated api

	* src/engine/gnc-book-p.h: add const

	* src/engine/gnc-book.c: strdup error message for backend

	* src/backend/file/gnc-backend-file.c: fix bugs

2001-08-19  Christian Stimming  <stimming@tuhh.de>

	* po/gnc-glossary.txt, po/glossary/gnc-glossary.txt,
	po/glossary/txt-to-pot.sh, po/glossary/de.po: Moved from the
	concept of one big ascii table to the concept of one po file for
	each translation of the glossary. Hence, created this
	subdirectory.

2001-08-18  Robert Graham Merkel  <rgmerk@mira.net>

	* src/engine/FreqSpec.c: i18n xaccFreqSpecGetFreqStr.

	* src/gnome/dialog-sxsincelast.c: fix bug in close callback.

2001-08-17  James LewisMoss  <jimdres@mindspring.com>

	* src/gnc-module/gnc-module.c (gnc_module_system_setup_load_path):
	add in void for empty argument list.
